user can destroy product in cart

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,3 +16,4 @@
     </div>
   </div>
 </div>
+<%= link_to "加入购物车", add_to_cart_product_path(@product), method: :post, class: "btn btn-lg btn-danger pull-right" %>
