--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -25,7 +25,12 @@
             </td>
             <td><%= cart_item.product.title %></td>
             <td><%= cart_item.product.price %></td>
-            <td><%= cart_item.quantity %></td>
+            <td>
+              <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
+                <%= f.select :quantity, 1..cart_item.product.quantity %>
+                <%= f.submit "更新" %>
+              <% end %>
+            </td>
             <td><%= link_to("删除", cart_item_path(cart_item.product_id), method: :delete, data: {confirm: "你确定把商品移除吗？"}) %></td>
           </tr>
         <% end %>
