user can see their orders info

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -37,9 +37,9 @@
       </tbody>
     </table>
     <span class="pull-right">
-      总计<%= render_cart_total_price %> RMB
+      总计<%= render_cart_total_price(current_cart) %> RMB
     </span>
     <br><br>
-    <%= link_to("确认结账", "#", class: "btn btn-lg btn-danger pull-right") %>
+    <%= link_to("确认结账", checkout_carts_path, method: :post, class: "btn btn-lg btn-danger pull-right") %>
   </div>
 </div>
