--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -60,6 +60,11 @@
         </tr>
       </tbody>
     </table>
-
+    <% if !@order.is_paid %>
+     <%= link_to("使用支付宝支付", pay_with_alipay_order_path(@order), method: :post, class: "btn btn-danger pull-right") %>
+     <%= link_to("使用微信支付", pay_with_wechat_order_path(@order), method: :post, class: "btn btn-danger pull-right") %>
+   <% else %>
+     <p class="pull-right">此订单已付款成功</p>
+   <% end %>
   </div>
 </div>
