--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -26,6 +26,7 @@
                   <% if current_user.is_admin? %>
                     <li><%= link_to("Admin panel", admin_products_path) %></li>
                   <% end %>
+                  <li><%= link_to("我的订单", account_orders_path) %></li>
                   <li><%= link_to("退出", destroy_user_session_path, method: :delete) %></li>
                 </ul>
               </li>
